--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,16 @@
             <version>3.0.1</version>
         </dependency>
         <dependency>
+            <groupId>org.mybatis</groupId>
+            <artifactId>mybatis</artifactId>
+            <version>3.5.4</version>
+        </dependency>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.15</version>
+        </dependency>
+        <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-api</artifactId>
             <version>5.6.0</version>
@@ -119,15 +129,16 @@
                 <artifactId>flyway-maven-plugin</artifactId>
                 <version>6.3.3</version>
                 <configuration>
-                    <url>jdbc:h2:D:/development/tmp/sinaNews-crawler/news</url>
+                    <url>jdbc:mysql://localhost:3306/news?character_set_server=utf8mb4</url>
                     <user>root</user>
                     <password>root</password>
                 </configuration>
                 <dependencies>
+                    <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
                     <dependency>
-                        <groupId>com.h2database</groupId>
-                        <artifactId>h2</artifactId>
-                        <version>1.4.199</version>
+                        <groupId>mysql</groupId>
+                        <artifactId>mysql-connector-java</artifactId>
+                        <version>8.0.15</version>
                     </dependency>
                 </dependencies>
             </plugin>
